<resources>
    <string name="app_name">UA Military-Connected Student Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UA Military-Connected Student Handbook</string>
    <string name="nav_header_subtitle">UA Veterans Services</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enrollment_button">Enrollment</string>
    <string name="GIBill_button">GI Bill</string>
    <string name="Information_button">Information</string>
    <string name="Events_button">Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_button">new</string>
    <string name="welcome_message_textview">Welcome</string>
    <string name="veterans_homepage_button">Veterans Homepage</string>
    <string name="ApplyToUATextView">Apply To The UA Online</string>
    <string name="click_here">Click Here</string>
    <string name="ApplyToGIBillTextView">Apply For GI-Bill</string>
    <string name="RequestTranscriptTextView">Request Official Transcripts From Your Previous Education\n For Military Transcripts Press Below</string>
    <string name="ApplyForFasfaTextView">Apply To FASFA For Financial Aid</string>
    <string name="NextStepButton">Next Step</string>
    <string name="quick_guide_button">Quick Guide</string>
    <string name="detailed_information_button">For Detailed Information</string>
    <string name="complete_next_steps_textview">Complete Next Steps</string>
    <string name="residency_status_textview">Check Your Residency Status</string>
    <string name="academic_advisement_textview">Academic Advisement</string>
    <string name="find_your_college_advisor_button">Find Your College Advisor</string>
    <string name="schedule_academic_advisement_button">Schedule An Appointment</string>
    <string name="certify_va_textview">Certify Class Schedule With VA</string>
    <string name="uaccess_button">UAccess</string>
    <string name="registrar_online_certification_button">Registar\'s Online Certification Guide</string>
    <string name="resource_reevaluation_textview">Reevaluate Financial Aid</string>
    <string name="register_with_va_ebenefits_textview">Register With VA EBenefits</string>
    <string name="nav_home">Home</string>
    <string name="nav_information">Information</string>
    <string name="nav_events">Events</string>
    <string name="nav_enrollment_guide">Enrollment Guide</string>
    <string name="nav_gallery">Gallery</string>
    <string name="about_us_button">Veteran\'s Center Info</string>
    <string name="crisis_hotline_button">Crisis Hotline</string>
    <string name="female_vets_button">Women\'s Out reach</string>
    <string name="jobs_button">Jobs</string>
    <string name="map_of_school">Map of School</string>
    <string name="top_button">T.O.P. Program</string>
    <string name="pals_button">PALS</string>
    <string name="groups_textview">Groups</string>
    <string name="important_information">Important Information</string>
    <string name="financial_aid">Financial Aid</string>
</resources>
