<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Information">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/importantInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_information" />

        <View
            android:id="@+id/importantInfoDivider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/aboutUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAboutUsClicked"
            android:text="@string/about_us_button" />

        <Button
            android:id="@+id/mapOfSchoolButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSchoolMapClicked"
            android:text="@string/map_of_school" />

        <Button
            android:id="@+id/crisisHotLine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCrisisHotlineClicked"
            android:text="@string/crisis_hotline_button"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="117dp" />

        <Button
            android:id="@+id/financialAidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/financial_aid"
            android:onClick="onFinancialAidClicked"/>

        <Button
            android:id="@+id/jobsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jobs_button"
            android:onClick="onJobsClicked"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/groupsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groups_textview" />

        <View
            android:id="@+id/groupsDivider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/palsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPalsClicked"
            android:text="@string/pals_button" />

        <Button
            android:id="@+id/female_vets_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onFemaleVetsClicked"
            android:text="@string/female_vets_button"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="42dp" />

        <Button
            android:id="@+id/TopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_button"
            android:onClick="onTopClicked"/>

    </LinearLayout>
</ScrollView>