<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/welcome_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message_textview"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/upcomingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/welcome_page_image"
        app:srcCompat="@mipmap/welcome_page_image" />

    <Button
        android:id="@+id/enrollment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEnrollmentClicked"
        android:text="@string/enrollment_button" />

    <Button
        android:id="@+id/information_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onInformationButtonClicked"
        android:text="@string/Information_button" />

    <Button
        android:id="@+id/vets_homepage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onVetsWebsiteClicked"
        android:text="@string/veterans_homepage_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/SaltTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Broken" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/events_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEventsClicked"
        android:text="@string/Events_button" />

</LinearLayout>