<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EnrollmentGuidePage1"
        android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/ApplyToUATextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ApplyToUATextView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/admissionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:onClick="onAdmissionsClicked"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/ApplyForGIBillTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ApplyToGIBillTextView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/GIBillButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:onClick="onGIBillClicked"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/RequestTranscriptTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RequestTranscriptTextView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/TranscriptButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:onClick="onTranscriptClicked"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/FasfaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ApplyForFasfaTextView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/FasfaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:onClick="onFasfaClicked"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80sp" />

        <Button
            android:id="@+id/NextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NextStepButton"
            android:onClick="onStep1NextClicked"/>
    </LinearLayout>
</ScrollView>


