<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollmentGuidePage3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resourceReevaluationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resource_reevaluation_textview"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/resourceReevaluationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:onClick="onResourceReevaluationClicked"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <TextView
        android:id="@+id/vaEbenefitsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_with_va_ebenefits_textview"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/vaEbenefitsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:onClick="onEbenefitsClicked"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

</LinearLayout>